# ocaml-sandbox

./: .gitignore  dune-project
category-theory/: README.md  dune
category-theory/first-steps/: functors.ml  helpers.ml  monoids.ml
debugging/: README.md  dune  uncaught.ml
deque/: deque.ml  dune
effect-handlers/: control_inversion.ml  control_inversion.mli  dune  effect_handler.ml
estimate-pi/: dune  estimate_pi.ml
functors-applicatives/: comp.ml  dune  validator.ml
functors_applicatives/: README.md  applic.ml  comp.ml  dune  funct.ml  validator.ml
generalized-algebraic-datatypes/: change.ml  dune  gadt.ml  gadt_ex.ml  tree.ml  tree_benchmark.ml  vec.ml
generalized-algebraic-datatypes/gadt-tutorial/: README.md  dune  very_first_gadt.ml
graph/: graph.ml
lenses/: dune  lens.ml
merge-sort/: merge_sort.ml
merge_sort/: dune
pragmatic-category-theory/: chunk.mli  line.ml  line.mli  pct.ml
pragmatic_category_theory/: README.md  dune
test/: dune
